--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".InscripcionActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -29,6 +35,11 @@
         <activity
             android:name=".Eventos"
             android:label="Eventos"/>
+        <activity
+            android:name=".RegistrarActivity"
+            android:label="Registrar"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
