--- a/SpainCosplay3/app/build.gradle
+++ b/SpainCosplay3/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile files('libs/mysql-connector-java-5.1.38-bin.jar')
 }
