--- a/SpainCosplay3/app/build.gradle
+++ b/SpainCosplay3/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
-        versionName "Beta-Registro"
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -21,9 +21,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile files('libs/mysql-connector-java-5.1.38-bin.jar')
 }
