Buenas y malas noticias
He tenido que renunciar de momento al DrawerLayout.

Esto no me preocupa puesto que ya he conseguido obtener los eventos
transformarlos en objetods y hacer el adaptador a medida que necesitaba.

Todo esta yendo sobre ruedas tengo que tener mucho cuidado con no abusar
del get de los asynctask

NOTA PARA CARLOS DEL FUTURO

Aprovecho los tiempos entre login registo y demas par adescargar
informacion usando los  ASTYNTASK

--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".EventosActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -34,7 +34,7 @@
             android:name=".AcercaDe"
             android:label="Acerca de.."/>
         <activity
-            android:name=".Eventos"
+            android:name=".PruebaNavegadorEventos"
             android:label="Eventos"/>
         <activity
             android:name=".RegistrarActivity"
