--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -20,13 +20,15 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
             android:name=".PrincipalActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
@@ -44,7 +46,8 @@
         <activity
             android:name=".RegistrarActivity"
             android:label="Registrar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
