--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="coterodev.spaincosplay">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,38 +19,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".PrincipalActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
-
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".EventosActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".AcercaDe"
-            android:label="Acerca de.."/>
-        <activity
-            android:name=".PruebaNavegadorEventos"
-            android:label="Eventos"/>
+            android:label="Acerca de.." />
         <activity
             android:name=".RegistrarActivity"
             android:label="Registrar"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".AjustesActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
 </manifest>
