--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="coterodev.spaincosplay"
-    android:versionCode="1"
-    android:versionName="Villa Foosha">
+    package="coterodev.spaincosplay">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- <uses-permission android:name="com.android.vending.CHECK_LICENSE" /> -->
