--- a/SpainCosplay3/app/build.gradle
+++ b/SpainCosplay3/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId 'coterodev.spaincosplay'
-        minSdkVersion 13
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 6
         versionName "Shells_Town"
@@ -27,5 +27,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    //compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
 }
