--- a/SpainCosplay3/app/src/main/AndroidManifest.xml
+++ b/SpainCosplay3/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".PrincipalActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".AcercaDe"
             android:label="Acerca de.." />
@@ -49,6 +49,12 @@
         <activity
             android:name=".InformacionActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <!--<activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />-->
+
     </application>
 
 </manifest>
