--- a/SpainCosplay3/app/build.gradle
+++ b/SpainCosplay3/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId 'coterodev.spaincosplay'
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 9
-        versionName "Ciudad_Orange"
+        versionCode 10
+        versionName "Chinjū no Shima"
     }
     buildTypes {
 
